--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build"
   },
-  "author": "",
+  "author": "Buzzy",
   "license": "ISC",
   "engines": {
     "node": "18.x.x",
     "npm": "^9.x.x"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.438.0",
     "@googleapis/calendar": "^9.3.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
